# HL7-Community-Digest

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: sources.yaml
scripts/: debug_timestamps.py  debug_zulip.py  local_test.py  test_zulip.py
src/: __init__.py  config.py  main.py  models.py
src/delivery/: __init__.py  ses_sender.py
src/formatters/: __init__.py  digest.py
src/processors/: __init__.py
src/scrapers/: __init__.py  confluence.py  zulip.py
tests/: __init__.py  test_confluence.py
